Idea lied about a method!! Fixed it.